@@ -165,9 +165,6 @@ extern "C" {
 /* Generate 80386 code? */
 {- $config{processor} eq "386" ? "# define" : "# undef" -} I386_ONLY
 
-# undef OPENSSL_UNISTD
-# define OPENSSL_UNISTD {- $target{unistd} -}
-
 {- $config{export_var_as_fn} ? "# define" : "# undef" -} OPENSSL_EXPORT_VAR_AS_FUNCTION
 
 /*
